deploy/kube/ctfd/ctfd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctfd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: $DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ctfd-deployment
                port:
                  number: 8000
  tls:
    - hosts:
        - $DOMAIN
      secretName: letsencrypt-prod
---
apiVersion: v1
kind: Service
metadata:
  name: ctfd-deployment
  labels:
    app: ctfd
spec:
  ports:
    - port: 8000
      protocol: TCP
  selector:
    app: ctfd
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd-deployment
  labels:
    app: ctfd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ctfd
        tier: frontend
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - name: ctfd
          image: ctfd/ctfd:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /var/uploads/
              name: ctfd-data
              subPath: uploads/
            - mountPath: /var/log/CTFd/
              name: ctfd-data
              subPath: logs/
      volumes:
        - name: ctfd-data
          persistentVolumeClaim:
            claimName: ctfd-data-pv-claim
